gcc/testsuite/algol68/compile/error-widening-2.a68
# { dg-options "-fstropping=upper" }  #

BEGIN INT a := 10;
      LONG INT l := a; # { dg-error "coerced" } #
      l
END
